2014-11-30  Steve  <sjh@kanga.hindmarch.home>

	* index.html
	* index.css
	* navbar.html
	* bootstrap/index.html
	- added an introduction to bootstrap

2014-01-09  Steve Hindmarch  <stephen.hindmarch@bt.com>

	* d3_iwd_v3.html:
	* d3_iwd_v1.js:
	* d3_iwd_v3.js:
	- working on a delete function 

2014-01-05  Steve  <sjh@kanga.hindmarch.home>

	* d3_iwd_v3.html:
	* d3_iwd_v3.js:
	* index.css:
	* iwd.css:
	- finished the profiles
	- added the rest of the priorities
	- added sections and footers with styling

	* ChangeLog
	- project change log created - better late than never eh?
