@@ -20,6 +20,33 @@
   <div id="navbarCollapse" class="collapse navbar-collapse">
     <ul class="nav navbar-nav">
       <li><a href="">Index</a></li>
+      <li class="dropdown">
+	<a href="#" class="dropdown-toggle" data-toggle="dropdown"
+	   role="button" aria-expanded="false">Oddments
+	  <span class="caret"></span></a>
+	<ul class="dropdown-menu" role="menu">
+	  <li><a href="emacs.html">Emacs</a></li>
+	  <li><a href="apache.html">Apache</a></li>
+	</ul>
+      </li>
+      <li class="dropdown">
+	<a href="#" class="dropdown-toggle" data-toggle="dropdown"
+	   role="button" aria-expanded="false">D3
+	  <span class="caret"></span></a>
+	<ul class="dropdown-menu" role="menu">
+	  <li><a href="d3.html">Index</a></li>
+	  <li class="divider"></li>
+	  <li><a href="d3_template.html">Template</a></li>
+	  <li><a href="d3_circles.html">Circles</a></li>
+	  <li><a href="d3_joins.html">Joins</a></li>
+	  <li><a href="d3_bar.html">Bar</a></li>
+	  <li><a href="d3_xyplot.html">XY Plot</a></li>
+	  <li class="divider"></li>
+	  <li><a href="d3_iwd_v1.html">Existing Priorities</a></li>
+	  <li><a href="d3_iwd_v2.html">Reading From A Table</a></li>
+	  <li><a href="d3_iwd_v3.html">Using Profiles</a></li>
+	</ul>
+      </li>
       <li><a href="/">Site</a></li>
       <li><a href="http://home.btconnect.com/sjhindmarch/">External Home Page</a></li>
     </ul>
