@@ -1,3 +1,8 @@
+2015-01-20  Steve  <sjh@kanga.hindmarch.home>
+
+	* navbar.html: 
+	- adding dropdowns to the nav bar
+
 2014-11-30  Steve  <sjh@kanga.hindmarch.home>
 
 	* index.html
